--- a/mp3/build.gradle
+++ b/mp3/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.5.1'
 	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.554'
 	implementation group: 'org.springframework.amqp', name: 'spring-rabbit', version: '3.0.10'
-
+	implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.4'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
