--- a/mp3/src/main/resources/application.properties
+++ b/mp3/src/main/resources/application.properties
@@ -10,8 +10,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.continue-on-error=true
 spring.sql.init.mode=ALWAYS
 
-config.aws.region=us-east-1
-config.aws.access-key=localstack
-config.aws.secret-key=localstack
-config.aws.s3.url=http://127.0.0.1:4566
-config.aws.s3.bucket=mp3-bucket
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
