--- a/mp3/build.gradle
+++ b/mp3/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.postgresql:postgresql:42.5.1'
 	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.554'
+	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.9.1'
+	implementation group: 'org.apache.tika', name: 'tika-parsers-standard-package', version: '2.9.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
