task-2-containerization: finish task

--- a/mp3/src/main/resources/application.properties
+++ b/mp3/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/resourcedb
+spring.profiles.active=local
 spring.datasource.username=resourceuser
 spring.datasource.password=resourcepassword
 
