--- a/song/src/main/resources/application.properties
+++ b/song/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/songdb
+spring.profiles.active=local
 spring.datasource.username=songuser
 spring.datasource.password=songpassword
 
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-
 server.port=8081
