--- a/mp3/src/main/resources/application-local.properties
+++ b/mp3/src/main/resources/application-local.properties
@@ -1,2 +1,2 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/resourcedb
-application.metadata.endpoint.url=http://localhost:8081/songs
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
