--- a/song/src/main/resources/application.properties
+++ b/song/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.password=songpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8081
+
+spring.application.name=song-service
+eureka.client.instance.preferIpAddress=true
