--- a/mp3/src/main/resources/application-dev.properties
+++ b/mp3/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 spring.datasource.url=jdbc:postgresql://mp3_db:5432/resourcedb
-application.metadata.endpoint.url=http://songapp:8081/songs
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
