--- a/mp3/src/main/resources/application.properties
+++ b/mp3/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=resourcepassword
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.continue-on-error=true
@@ -12,3 +12,7 @@ spring.sql.init.mode=ALWAYS
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.application.name=mp3-service
+eureka.client.instance.preferIpAddress=true
+application.song.name=song-service
